#717: DiffViewer Styling and UI Issues Issue 6: Prevent Use Case Table (resp. Scenario Table) and Details to overlap if many labels are used. The problem was that the inherited style "white-space: no-wrap" prevented proper line-wrapping inside and between the labels. "float: left" solves this problem, but requires additional CSS so that the preceding text is in the right place and that the labels are wrapped sensibly.

--- a/scenarioo-client/app/styles/scenarioo.less
+++ b/scenarioo-client/app/styles/scenarioo.less
@@ -533,7 +533,18 @@ label {
   padding-bottom: 0.2em;
 }
 
+td > .sc-label {
+  margin-top: 3px;
+  margin-bottom: 3px;
+  float: left;
+}
+
 .sc-label {
+  margin-right: 2px;
+}
+
+span.sc-text-before-label {
+  float: left;
   margin-right: 2px;
 }
 
